--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="توضیح مختصر درباره سایت">
+    <meta name="keywords" content="کلمات, کلیدی">
     <title>کد 377 مدیران خودرو نجفی گل | ثبت نام محصولات مدیران خودرو 1404</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
