Add SRI and crossorigin to CDN resources

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>کد 377 مدیران خودرو نجفی گل | ثبت نام محصولات مدیران خودرو 1404</title>
-    <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <script src="https://cdn.tailwindcss.com" integrity="sha384-ER5rPoT/gRghOAqxCLv7saEh1PQuPgzpT9VtxxvpG6vE11wV8L19/9e7N1KQgpO2" crossorigin="anonymous" defer></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-pC5IanFkFJxuxMxDPZWS9Vyhi3F7S3w7Dnk3a1JpN96CBvs1+FiSVqS+8kKQE9gYd5x3N3a/wr4kDUFc1zRlw==" crossorigin="anonymous">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Vazirmatn:wght@100;200;300;400;500;600;700;800;900&display=swap');
         
